[package]
name = "first"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite = "0.30.4"
rppal = { version = "0.14.1", features = ["hal-unproven"] }
dht-sensor = "0.2.1"
config = "0.13.3"
chrono = "0.4.24"
serde = "1.0.160"
